# kkjukebox

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
kkjukebox/: cli.py  game.py  jukebox.py  location.py  song.py  utils.py  weather.py
kkjukebox/resources/: hour_loop_times.json  kk_loop_times.json  loop_times.json
