[project]
name = "kkjukebox"
version = "0.6.0"
description = "I don't ask for much. A stool to sit on, a song to sing, and some folks gathered 'round to hear it."
readme = "README.md"
authors = [
    {name = "David Tillery", email = "djtillery@gmail.com"},
]
requires-python = ">=3.12, <3.13"
dependencies = [
    "click >=8.1.7, <9.0.0",
    "pygame >=2.5.2, <3.0.0",
    "pydub >=0.25.1, <1.0.0",
    "geocoder >=1.38.1, <2.0.0",
    "python-weather >=2.0.3, <3.0.0",
    "rich-click >=1.8.2, <2.0.0",
]

[project.scripts]
kkjukebox = "kkjukebox.cli:cli"

[dependency-groups]
dev = [
    "mypy >=1.10.0, <2.0.0",
    "isort >=5.13.2, <6.0.0",
    "pre-commit >=3.7.1, <4.0.0",
    "black >=24.4.2, <25.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
